--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd dist && static-server"
+    "start": "cd dist && static-server",
+    "compile": "tsc -p .",
+    "watch": "tsc -p . --watch"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
   "homepage": "https://github.com/pstovik/piskworky#readme",
   "dependencies": {
     "static-server": "^2.2.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.6.3"
   }
 }
