--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cd dist && static-server",
     "compile": "tsc -p .",
-    "watch": "tsc -p . --watch"
+    "watch": "tsc -p . --watch",
+    "build": "esbuild ./src/index.ts --bundle --outfile=dist/js/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/pstovik/piskworky#readme",
   "dependencies": {
+    "esbuild": "^0.14.38",
     "static-server": "^2.2.1"
   },
   "devDependencies": {
